--- a/src/main/resources/org/emerald/butler/messages_ru.properties
+++ b/src/main/resources/org/emerald/butler/messages_ru.properties
@@ -6,6 +6,36 @@ org.emerald.butler.entity/Apartment=Квартира
 org.emerald.butler.entity/Apartment.house=Дом
 org.emerald.butler.entity/Apartment.number=Номер
 org.emerald.butler.entity/ApartmentRole=Роль в квартире
+org.emerald.butler.entity/ApartmentRole.DWELLER=Житель
+org.emerald.butler.entity/ApartmentRole.OWNER=Владелец
+org.emerald.butler.entity/ChatRole=Роль в чате
+org.emerald.butler.entity/ChatRole.CHIEF=Ответственный
+org.emerald.butler.entity/ChatRole.DWELLER=Обычный
+org.emerald.butler.entity/Dweller=Житель
+org.emerald.butler.entity/Dweller.firstName=Имя
+org.emerald.butler.entity/Dweller.lastName=Фамилия
+org.emerald.butler.entity/Dweller.telegramId=Идентификатор пользователя телеграм
+org.emerald.butler.entity/Dweller.userName=Логин
+org.emerald.butler.entity/DwellerApartmentRole=Роль жителя квартиры
+org.emerald.butler.entity/DwellerApartmentRole.apartment=Квартира
+org.emerald.butler.entity/DwellerApartmentRole.apartmentRole=Роль в квартире
+org.emerald.butler.entity/DwellerApartmentRole.dweller=Житель
+org.emerald.butler.entity/DwellerChatRole=Роль жителя в чате
+org.emerald.butler.entity/DwellerChatRole.chat=Чат
+org.emerald.butler.entity/DwellerChatRole.chatRole=Роль в чате
+org.emerald.butler.entity/DwellerChatRole.dweller=Житель
+org.emerald.butler.entity/House=Дом
+org.emerald.butler.entity/House.city=Город
+org.emerald.butler.entity/House.number=Номер
+org.emerald.butler.entity/House.region=Регион
+org.emerald.butler.entity/House.street=Улица
+org.emerald.butler.entity/TelegramChat=Чат телеграма
+org.emerald.butler.entity/TelegramChat.house=Дом
+org.emerald.butler.entity/TelegramChat.telegramChatId=Идентификатор чата в телеграме
+org.emerald.butler.entity/Transport=Транспорт
+org.emerald.butler.entity/Transport.dweller=Владелец
+org.emerald.butler.entity/Transport.number=Номер
+org.emerald.butler.entity/Transport.order=Порядковый номер
 org.emerald.butler.entity/User = Пользователь
 org.emerald.butler.entity/User.active = Активен
 org.emerald.butler.entity/User.email = Почтовый адрес
@@ -16,6 +46,14 @@ org.emerald.butler.entity/User.password = Пароль
 org.emerald.butler.entity/User.timeZoneId = Часовой пояс
 org.emerald.butler.entity/User.username = Логин
 org.emerald.butler.entity/User.version = Версия
+org.emerald.butler.entity/UserCommand=Текущий прогресс пользователя
+org.emerald.butler.entity/UserCommand.command=Операция
+org.emerald.butler.entity/UserCommand.dweller=Житель
+org.emerald.butler.entity/UserCommand.progress=Этап
+org.emerald.butler.entity/UserCommandTrace=История операции пользователя
+org.emerald.butler.entity/UserCommandTrace.order=Номер
+org.emerald.butler.entity/UserCommandTrace.progressStage=Этап
+org.emerald.butler.entity/UserCommandTrace.userCommand=Операция пользователя
 
 org.emerald.butler.screen.login/badCredentials = Введен неизвестный логин или неподходящий пароль
 org.emerald.butler.screen.login/caption = Дворецкий
