--- a/src/main/resources/org/emerald/butler/messages_ru.properties
+++ b/src/main/resources/org/emerald/butler/messages_ru.properties
@@ -5,8 +5,12 @@ databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME = Пользовател
 notification.success.caption=Успешно
 notification.success.description=Действие завершено успешно
 
+org.emerald.butler.entity/StandardEntity=Стандартная сущность
+org.emerald.butler.entity/StandardEntity.id=Идентификатор
 org.emerald.butler.entity/Apartment=Квартира
 org.emerald.butler.entity/Apartment.dwellers=Жители
+org.emerald.butler.entity/Apartment.floor=Этаж
+org.emerald.butler.entity/Apartment.frontDoor=Подъезд
 org.emerald.butler.entity/Apartment.house=Дом
 org.emerald.butler.entity/Apartment.number=Номер
 org.emerald.butler.entity/ApartmentRole=Роль в квартире
@@ -49,7 +53,6 @@ org.emerald.butler.entity/User = Пользователь
 org.emerald.butler.entity/User.active = Активен
 org.emerald.butler.entity/User.email = Почтовый адрес
 org.emerald.butler.entity/User.firstName = Имя
-org.emerald.butler.entity/User.id = Идентификатор
 org.emerald.butler.entity/User.lastName = Фамилия
 org.emerald.butler.entity/User.password = Пароль
 org.emerald.butler.entity/User.timeZoneId = Часовой пояс
