--- a/src/main/resources/org/emerald/butler/messages_ru.properties
+++ b/src/main/resources/org/emerald/butler/messages_ru.properties
@@ -76,6 +76,8 @@ org.emerald.butler.screen.charts/popularityByRegionScreen.caption=Популяр
 org.emerald.butler.screen.charts/text-field.max-results.caption=Макс. результатов
 org.emerald.butler.screen.charts/text-field.unlimited-results.caption=Неограниченно
 
+org.emerald.butler.screen.extentityinspectorbrowser/entityType=Тип сущности
+
 org.emerald.butler.screen.login/badCredentials = Введен неизвестный логин или неподходящий пароль
 org.emerald.butler.screen.login/caption = Дворецкий
 org.emerald.butler.screen.login/emptyUsernameOrPassword = Пожалуйста, введите логин и пароль
