--- a/src/main/resources/org/emerald/butler/messages_ru.properties
+++ b/src/main/resources/org/emerald/butler/messages_ru.properties
@@ -21,10 +21,12 @@ org.emerald.butler.entity/ChatRole.CHIEF=Ответственный
 org.emerald.butler.entity/ChatRole.DWELLER=Обычный
 org.emerald.butler.entity/Dweller=Житель
 org.emerald.butler.entity/Dweller.apartments=Квартиры
+org.emerald.butler.entity/Dweller.birthDate=Birth date
 org.emerald.butler.entity/Dweller.chats=Chats
 org.emerald.butler.entity/Dweller.firstName=Имя
 org.emerald.butler.entity/Dweller.lastName=Фамилия
 org.emerald.butler.entity/Dweller.telegramId=Идентификатор пользователя телеграм
+org.emerald.butler.entity/Dweller.telegramUser=Telegram user
 org.emerald.butler.entity/Dweller.transports=Транспорт
 org.emerald.butler.entity/Dweller.userName=Логин
 org.emerald.butler.entity/DwellerApartmentRole=Роль жителя квартиры
@@ -41,6 +43,14 @@ org.emerald.butler.entity/House.city=Город
 org.emerald.butler.entity/House.number=Номер
 org.emerald.butler.entity/House.region=Регион
 org.emerald.butler.entity/House.street=Улица
+org.emerald.butler.entity/Meters=Meters
+org.emerald.butler.entity/Meters.coldWater=Холодная вода
+org.emerald.butler.entity/Meters.createdBy=Кем создано
+org.emerald.butler.entity/Meters.createdDate=Когда создано
+org.emerald.butler.entity/Meters.dweller=Dweller
+org.emerald.butler.entity/Meters.electricity=Электричество
+org.emerald.butler.entity/Meters.gas=Газ
+org.emerald.butler.entity/Meters.hotWater=Горячая вода
 org.emerald.butler.entity/TelegramChat=Чат телеграма
 org.emerald.butler.entity/TelegramChat.dwellers=Жители
 org.emerald.butler.entity/TelegramChat.house=Дом
@@ -71,6 +81,7 @@ org.emerald.butler.screen.charts/Mode=Режим подсчёта
 org.emerald.butler.screen.charts/Mode.BY_APARTMENTS=По квартирам
 org.emerald.butler.screen.charts/Mode.BY_DWELLERS=По жителям
 org.emerald.butler.screen.charts/combo-box.mode.caption=Считать
+org.emerald.butler.screen.charts/popularityByAge.caption=Популярность по возрастам
 org.emerald.butler.screen.charts/popularityByCityScreen.caption=Популярность по городам
 org.emerald.butler.screen.charts/popularityByRegionScreen.caption=Популярность по регионам
 org.emerald.butler.screen.charts/text-field.max-results.caption=Макс. результатов
