--- a/src/main/resources/org/emerald/butler/messages_ru.properties
+++ b/src/main/resources/org/emerald/butler/messages_ru.properties
@@ -21,7 +21,7 @@ org.emerald.butler.entity/ChatRole.CHIEF=Ответственный
 org.emerald.butler.entity/ChatRole.DWELLER=Обычный
 org.emerald.butler.entity/Dweller=Житель
 org.emerald.butler.entity/Dweller.apartments=Квартиры
-org.emerald.butler.entity/Dweller.birthDate=Birth date
+org.emerald.butler.entity/Dweller.birthDate=Дата рождения
 org.emerald.butler.entity/Dweller.chats=Chats
 org.emerald.butler.entity/Dweller.firstName=Имя
 org.emerald.butler.entity/Dweller.lastName=Фамилия
@@ -37,6 +37,19 @@ org.emerald.butler.entity/DwellerChatRole=Роль жителя в чате
 org.emerald.butler.entity/DwellerChatRole.chat=Чат
 org.emerald.butler.entity/DwellerChatRole.chatRole=Роль в чате
 org.emerald.butler.entity/DwellerChatRole.dweller=Житель
+org.emerald.butler.entity/Handbook=Справочник
+org.emerald.butler.entity/Handbook.categories=Categories
+org.emerald.butler.entity/Handbook.chat=Chat
+org.emerald.butler.entity/HandbookCategory=Handbook category
+org.emerald.butler.entity/HandbookCategory.handbook=Handbook
+org.emerald.butler.entity/HandbookCategory.id=Id
+org.emerald.butler.entity/HandbookCategory.items=Items
+org.emerald.butler.entity/HandbookCategory.name=Name
+org.emerald.butler.entity/HandbookItem=Handbook item
+org.emerald.butler.entity/HandbookItem.category=Category
+org.emerald.butler.entity/HandbookItem.createdBy=Created by
+org.emerald.butler.entity/HandbookItem.createdDate=Created date
+org.emerald.butler.entity/HandbookItem.value=Value
 org.emerald.butler.entity/House=Дом
 org.emerald.butler.entity/House.apartmens=Квартиры
 org.emerald.butler.entity/House.city=Город
